--- a/mainModlue/build.gradle
+++ b/mainModlue/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     testImplementation 'junit:junit:4.14-SNAPSHOT'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    api project(':test-sub:subModlue')
 }
