--- a/settings.gradle
+++ b/settings.gradle
@@ -15,3 +15,5 @@ dependencyResolutionManagement {
 
 rootProject.name = "TestMain"
 include ':app'
+include ':mainModlue'
+include ':test-sub:subModlue'
