解析以及生成xml

--- a/mainModlue/build.gradle
+++ b/mainModlue/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
 }
-
+println("order mainModlue start")
 android {
     namespace 'com.example.mainmodlue'
     compileSdk 34
@@ -37,5 +37,9 @@ dependencies {
     testImplementation 'junit:junit:4.14-SNAPSHOT'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    api project(':test-sub:subModlue')
 }
+
+afterEvaluate {
+    println("order mainModlue afterEvaluate")
+}
+println("order mainModlue end")
