--- a/build.gradle
+++ b/build.gradle
@@ -3,4 +3,20 @@ plugins {
 id 'com.android.application' version '8.2.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.9.0' apply false
     id 'com.android.library' version '8.2.0' apply false
+    id 'org.jetbrains.kotlin.jvm' version '1.9.0' apply false
 }
+afterEvaluate {
+    println("order all afterEvaluate")
+}
+
+subprojects {
+    println("order all subprojects "+ project.name)
+}
+
+allprojects {
+    println("order all allprojects "+ project.name)
+}
+
+
+
+println("order all end")
