--- a/settings.gradle
+++ b/settings.gradle
@@ -12,8 +12,10 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-
+println("order setting start")
 rootProject.name = "TestMain"
 include ':app'
 include ':mainModlue'
 include ':bussness:mylibrary'
+println("order setting end")
+include ':lib'
