--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,7 @@ dependencies {
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
 
     implementation project(':mainModlue')
+    implementation 'com.ldw.submodlue:submodlue:1.0.2'
 }
 afterEvaluate {
     println("order app afterEvaluate")
