--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -1,8 +1,9 @@
 plugins {
     id 'java-library'
     id 'org.jetbrains.kotlin.jvm'
+    id 'groovy'
 }
-
+apply plugin:'maven-publish'
 java {
     sourceCompatibility = JavaVersion.VERSION_1_7
     targetCompatibility = JavaVersion.VERSION_1_7
@@ -10,4 +11,10 @@ java {
 
 dependencies {
     implementation 'org.dom4j:dom4j:2.1.1'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+
+    //我们需要实现gradle的Plugin<T>接口，来做自定义插件，因此依赖gradle api
+    implementation gradleApi()
+    //依赖gradle提供的groovy sdk，在编写自定义插件的时候，用groovy更快。
+    implementation localGroovy()
 }
