--- a/settings.gradle
+++ b/settings.gradle
@@ -10,6 +10,13 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        maven {
+            url "https://maven.pkg.github.com/HLYLDW/TestSub"
+            credentials {
+                username = "HLYLDW"
+                password = "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"
+            }
+        }
     }
 }
 println("order setting start")
