--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -17,4 +17,10 @@ dependencies {
     implementation gradleApi()
     //依赖gradle提供的groovy sdk，在编写自定义插件的时候，用groovy更快。
     implementation localGroovy()
+
+
+    // ASM 依赖库
+    implementation("org.ow2.asm:asm:9.3")
+    implementation("org.ow2.asm:asm-commons:9.3")
+    implementation("org.ow2.asm:asm-util:9.3")
 }
